--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
 
 <body>
 	<header>
-		<img src="./Imágenes/Dz.logo.png" alt="logo" width="150px" height="auto">
+		<img src="./img/Dz.logo.png" alt="logo" width="150px" height="auto">
 		<nav class="navbar navbar-expand-lg navbar-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,26 +47,26 @@
 					<div id="carouselExampleIndicators" class="carousel slide divEspacio" data-ride="carousel">
 						<div class="carousel-inner" role="listbox">
 							<div class="carousel-item active">
-								<img class="d-block mx-auto" src="./Imágenes/DZ.entrenamiento.png"
+								<img class="d-block mx-auto" src="./img/DZ.entrenamiento.png"
 									alt="mujer entrenando en distrito z" data-holder-rendered="true" width="auto"
 									height="350px">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block mx-auto" src="./Imágenes/juani.png" alt="sentadilla"
+								<img class="d-block mx-auto" src="./img/juani.png" alt="sentadilla"
 									data-holder-rendered="true" width="auto" height="350px">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block mx-auto" src="./Imágenes/DZ.jefe.jpg"
+								<img class="d-block mx-auto" src="./img/DZ.jefe.jpg"
 									alt="Profesor dando indicaciones de movimiento" data-holder-rendered="true"
 									width="auto" height="350px">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block mx-auto" src="./Imágenes/DZ.entrenamiento1.jpg"
+								<img class="d-block mx-auto" src="./img/DZ.entrenamiento1.jpg"
 									alt="Profesor observando la rutina" data-holder-rendered="true" width="auto"
 									height="350px">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block mx-auto" src="./Imágenes/par.png" alt="Concentración"
+								<img class="d-block mx-auto" src="./img/par.png" alt="Concentración"
 									data-holder-rendered="true" width="auto" height="350px">
 							</div>
 						</div>
@@ -100,7 +100,7 @@
 						dejar tus datos y en breve nos comunicaremos con vos</p>
 					<button type="button" class="btn btn-info"><a class="link" class="button"
 							href="contact.html">Contacto</a></button>
-					<img class="card-img-bottom py-2" src="./Imágenes/phone.jpg" alt="contacto">
+					<img class="card-img-bottom py-2" src="./img/phone.jpg" alt="contacto">
 				</div>
 
 			</div>
