--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="./Imágenes/Dz.logo.png" alt="logo" width="150px" height="auto">
+        <img src="./img/Dz.logo.png" alt="logo" width="150px" height="auto">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
     </header>
 
     <section id="plantillaIndex">
-        <img src="./Imágenes/Distrito Z.plantilla.png" alt="Distrito Z - Zona de entrenamiento" width="60%"
+        <img src="./img/Distrito Z.plantilla.png" alt="Distrito Z - Zona de entrenamiento" width="60%"
             height="auto" />
     </section>
 
@@ -53,7 +53,7 @@
                     Aquí contamos con elementos de entrenamiento que van a ser nuestros aliados en la actividad.
                 </p>
 
-                <img src="./Imágenes/DZ.entrenamiento1.jpg" alt="entrena" width="60%"/>
+                <img src="./img/DZ.entrenamiento1.jpg" alt="entrena" width="60%"/>
 
                 <p>
                     Trabajamos en un espacio con capacidad reducida (máximo 20 personas) y esto nos ayuda a
@@ -72,7 +72,7 @@
                     dejar tus datos y en breve nos comunicaremos con vos</p>
                 <button type="button" class="btn btn-info"><a class="link" class="button"
                         href="contact.html">Contacto</a></button>
-                <img class="card-img-bottom py-2" src="./Imágenes/phone.jpg" alt="contacto">
+                <img class="card-img-bottom py-2" src="./img/phone.jpg" alt="contacto">
             </div>
 
         </div>
